			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2598 2004/04/22 02:44:27 suz Exp $

<200404>
2004-04-22  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
	* kame/sys/netinet/in_msf.c, kame/sys/netinet6/in6_msf.c: silently
	ignore an advanced MSF-API call (instead of returning EINVAL) when
	the requested MSF is same as the one stored in kernel.

2004-04-21  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_output.c (ip6_ctloutput): simplified the
	fix to FreeBSD-SA-04:06.ipv6 (merged from FreeBSD to KAME on
	040406).  The previous one worried too much about parameters even
	though we actually validate them in subroutines.  This code also
	is more compatible with other *BSDs, which do copyin within
	setsockopt().

2004-04-20  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/icmp6.c: ICMPv6 packets regarding multicast 
	routing (e.g. MLDv1 report) shouldn't be a target of MSF, although
	draft-vida-mld-v2-08.txt says only MLDv2 is such exception.
	(otherwise multicast routing process cannot receive such packets,
	 which prevents it from shifting to MLDv1-compatible-mode)

2004-04-20  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/mldv2.c: fixed a MLDv2-enabled freebsd[45] kernel 
	crash due to an improper termincation of layer2 multicast listening.
	(ToDo: same fix is necesary for freebsd[45]/sys/netinet/in.c)

2004-04-18  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/pim6sd/{vif.c, mld6.[ch]}, kame/sys/netinet6/in6.h:
	All MLDv2-capable routers multicast address has been officially assigned
	as "ff02::16"

2004-04-18  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (explore_numeric): re-enabled
	the special case for AF_INET (use inet_aton instead of inet_pton)
	as required in RFC3493.  getaddrinfo now accepts the "classful"
	form of IPv4 addresses.

2004-04-17  kjc@csl.sony.co.jp
	* kame/sys/altq/
	build altq under freebsd5-current.
	submitted by Max Laier <max@love2party.net>
