@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2598 2004/04/22 02:44:27 suz Exp $
+$KAME: CHANGELOG,v 1.2599 2004/04/27 11:45:06 suz Exp $
 
 <200404>
+2004-04-27  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
+	* kame/sys/netinet6/in6_msf.c: fixed an IPv6 per-interface MSF 
+	calculation failure when MSF is in EXCLUDE mode
+
 2004-04-22  SUZUKI, Shinsuke  <suz@crl.hitachi.co.jp>
 	* kame/sys/netinet/in_msf.c, kame/sys/netinet6/in6_msf.c: silently
 	ignore an advanced MSF-API call (instead of returning EINVAL) when
